--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/legistcp?serverTimezone=Europe/Moscow
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5433/legist
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
