--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/legist
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.flyway.baselineOnMigrate = true 
+spring.datasource.hikari.schema=migrations
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+# Flyway
+spring.flyway.schemas=migrations
+spring.flyway.locations=classpath:db/migration
 management.endpoints.web.exposure.include=*
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.allow-bean-definition-overriding=true
