--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.flyway.baselineOnMigrate = true 
 spring.datasource.hikari.schema=migrations
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.flyway.baselineOnMigrate = true 
+spring.jpa.hibernate.ddl-auto=update
 # Flyway
 spring.flyway.schemas=migrations
 spring.flyway.locations=classpath:db/migration
