--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,8 @@ logging.level.org.hibernate=error
 jwt.token.secret=jwtappcourse
 jwt.token.expired=360000000
 
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+DIRECTORY_PATH.files=src/main/resources/FileStorage/
