--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userin
 security.oauth2.resource.preferTokenInfo=true
 
 logging.level.root=debug
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=warn
 logging.level.org.hibernate=error
 
 jwt.token.secret=jwtappcourse
