--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ security.oauth2.client.scope=openid,email,profile
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
 security.oauth2.resource.preferTokenInfo=true
 
-logging.level.root=debug
-logging.level.org.springframework.web=warn
+logging.level.root=warn
+logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
 jwt.token.secret=jwtappcourse
