--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ security.oauth2.client.scope=openid,email,profile
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
 security.oauth2.resource.preferTokenInfo=true
 
-logging.level.root=warn
+logging.level.root=error
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
