--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,6 @@
 			<version>0.8.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
-
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -101,6 +96,12 @@
    			<groupId>io.springfox</groupId>
     			<artifactId>springfox-swagger-ui</artifactId>
 	    		<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
